--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> Tea Time </title>
         <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
         <link rel="stylesheet" media="screen and (max-width: 700px)" href="assets/css/small.css">
-        <link rel="stylesheet" media="screen and (max-device-width: 700px)" href="assets/css/small.css" />
+        <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="assets/css/small.css" />
         <link href='http://fonts.googleapis.com/css?family=Oswald|Merriweather:300italic,300,700,700italic' rel='stylesheet' type='text/css'>
         <script src="assets/js/jquery-1.9.1.js"></script>
         <script src="assets/js/script.js"></script>
