--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title> Tea Time </title>
         <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" media="screen and (max-width: 700px)" href="assets/css/small.css">
         <link rel="stylesheet" type="text/css" media="screen, handheld and (max-device-width: 480px)" href="assets/css/small.css" />
         <link href='http://fonts.googleapis.com/css?family=Oswald|Merriweather:300italic,300,700,700italic' rel='stylesheet' type='text/css'>
