--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <!--WEBSITE MADE BY ANGIRA SHIRAHATTI FOR THE WEB DESIGN DECAL, FALL 2014-->
     <head>
         <title> Tea Time </title>
-        <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
+        <link rel = "stylesheet" type = "text/css" media="screen and (min-device-width: 700px)" href = "assets/css/style.css">
         <link rel="stylesheet" type="text/css" media="screen, handheld and (max-device-width: 700px)" href="assets/css/small.css" />
         <link href='http://fonts.googleapis.com/css?family=Oswald|Merriweather:300italic,300,700,700italic' rel='stylesheet' type='text/css'>
         <script src="assets/js/jquery-1.9.1.js"></script>
