--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <!--WEBSITE MADE BY ANGIRA SHIRAHATTI FOR THE WEB DESIGN DECAL, FALL 2014-->
     <head>
         <title> Tea Time </title>
+        <meta name="viewport" content="width=device-width">
         <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 700px)" href="assets/css/small.css" />
         <link href='http://fonts.googleapis.com/css?family=Oswald|Merriweather:300italic,300,700,700italic' rel='stylesheet' type='text/css'>
