what is safari omg

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
         <!-- PU-ERH -->
         <div class = "container" id = "puerh">
-                <div class = "row"><div class = "teastats">
+                <div class = "teastats">
                     <!-- TEAPOT IMAGE -->
                     <img class = "two" src = "assets/img/icons/puerh_light.png">
                     <div class = "subtitle"> Pu-Erh </div>
@@ -198,7 +198,7 @@
                     <p>Pu-erh or Pu'er is a variety of fermented dark tea produced in Yunnan province, China.[1] Fermentation is a tea production style in which the tea leaves undergo microbial fermentation and oxidation after they are dried and rolled.[2] This process is a Chinese specialty and produces tea known as Hei Cha (黑茶), commonly translated as dark, or black tea (this type of tea is completely different from what in the West is known as "black tea", which in China is called "red tea" 红茶). The best known variety of this category of tea is Pu-erh from Yunnan Province, named after the trading post for dark tea during imperial China.</p>
                     <div class = "header"> Preparation: </div>
                     <p> Optimum temperatures are generally regarded to be around 95 °C for lower quality pu'erhs and 85–89°C for good ripened and aged raw pu'erh. The tea is steeped for 12 to 30 seconds in the first few infusions, increasing to 2 to 10 minutes in the last infusions. The prolonged steeping sometimes used in the west can produce dark, bitter, and unpleasant brews. Quality aged pu'erh can yield many more infusions, with different flavor nuances when brewed in the traditional Gong-Fu method. </p>
-                </div></div>
+                </div>
         </div>
 
         <!-- SPECIALTY -->
