--- a/jon/index.html
+++ b/jon/index.html
@@ -4,6 +4,8 @@
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,
     400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel = "stylesheet" type = "text/css" href = "style.css"> 
+    <script src="jquery-1.9.1.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 	<div class = "container">
