--- a/jon/index.html
+++ b/jon/index.html
@@ -42,10 +42,10 @@
 			<p> It still happens every now and then that someone will ask me how we met, or
              what I like about you, or why I get that stupid, disgustingly happy look on my 
             face when I talk about you (Thanh Hien's words, not mine), and although I try 
-            to explain, I can never quite seem to capture how nice it is for me that I have 
-            you. How nice it is to have someone I trust so absolutely, who I always feel 
+            to explain, I can never quite seem to capture how great it is for me that I have 
+            you. How great it is to have someone I trust so absolutely, who I always feel 
             like I can talk to, who always, without fail, makes my day better, and makes 
-            scary things seem less scary. The personal heater is nice too. In any case,    
+            scary things seem less scary (the personal heater is good too). In any case,    
 			having you is really nice, and I really do hope that having me is even half 
             as nice for you as having you is for me. </p>
 
