--- a/jon/index.html
+++ b/jon/index.html
@@ -33,7 +33,7 @@
 			for dragging you along, and I know you're snorting or something right now because 
 			you think I apologize too much, but I'm going to do it anyway. The next few months 
 			will probably be less than great, and for that I am truly, deeply sorry. 
-			To appease my guilty conscience, I have come up with a few things that 
+			To mitigate my guilt some, I have come up with a few things that 
             I'd like for us to do to make this whole "long distance" thing slightly 
             less awful. These are compiled 
             <a href = "https://docs.google.com/document/d/1raAxAt0e4ehyyq_ZgHjlEMQMoWrPhvy7_x_p7pGFIZ8/edit?usp=sharing" target = "_blank">here</a> 
@@ -45,23 +45,24 @@
             to explain, I can never quite seem to capture how great it is for me that I have 
             you. How great it is to have someone I trust so absolutely, who I always feel 
             like I can talk to, who always, without fail, makes my day better, and makes 
-            scary things seem less scary (the personal heater is good too). In any case,    
-			having you is really nice, and I really do hope that having me is even half 
-            as nice for you as having you is for me. </p>
+            scary things seem less scary (the personal heater is good too).</p>
+
+            <p>In any case, having you is really nice, and I really do hope that having me 
+            is even half as nice for you as having you is for me. </p>
 
 			<p>Also I hope you didn't have to re-read that sentence too many times. 
             I tried to make it better, but I couldn't.</p>
 
 			<p>So basically, long story short, tl;dr, I love you. Like a lot. 
-            Like, really, no joke, <i>a lot.</i> Also I'm going to miss you <i>a lot</i>, 
-            and I am unbelievably glad that you live and breathe and  walk around and stuff.
+            Like, really, no joke, <i>a lot,</i> and I am unbelievably glad that you live 
+            and breathe and  walk around and stuff. Thanks for doing that, I appreciate it.
             </p>
 
 			<p>Okay, that's all, I think. </p>
 
 			<p class = "signature">&#10084
 			<br> Angira Shirahatti, 
-            <br>December 15, 2014 </p>
+            <br>December 18, 2014 </p>
 		</div> <!-- end #letter -->
 	</div> <!-- end .container -->
 </body>
