--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <!--WEBSITE MADE BY ANGIRA SHIRAHATTI FOR THE WEB DESIGN DECAL, FALL 2014-->
+    <!--WEBSITE MADE BY ANGIRA SHIRAHATTI -->
     <head>
         <title> Tea Time </title>
         <meta name="viewport" content="width=device-width">
