--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class = "montserrat" id = "menu">
             <div class = "container">
                 <a class = "m border" href = "index.html#work">work:</a>
-                <br><a class = "border" href = "#">tea time</a>
+                <br><a class = "border" href = "teatime">tea time</a>
                 <br><a class = "border" href = "#">lily-livered</a>
                 <br><a class = "border" href = "http://innovativedesign.club" target = "_blank">innovative design</a>
                 <br><a class = "border" href = "http://www.baremagazine.org" target = "_blank">bare</a>
@@ -94,7 +94,7 @@
                 <div class = "pure-g">
                     <div class = "pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
                         <div class = "padding raleway">
-                             <a class = "worklink" href = "#">
+                             <a class = "worklink" href = "teatime">
                                 <img class = "onefifty" src = "icons/work/teatime.svg">
                                 <div class = "montserrat withborder">Tea Time &#8594;</div>
                             </a>
