--- a/sculptures.html
+++ b/sculptures.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <title>Angira Shirahatti: Sketchbook</title>
+        <title>Angira Shirahatti: Sculptures</title>
         <meta name = "description" content = "Personal website for Angira Shirahatti, Designer, Developer and UC Berkeley sophomore">
 
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
@@ -26,8 +26,8 @@
      	<div class = "montserrat" id = "menu">
      		<div class = "container">
      			<a class = "border" href = "index.html#work">work:</a>
-     			<br><a class = "border" href = "#">tea time</a>
-     			<br><a class = "border" href = "#">lily-livered</a>
+     			<br><a class = "border" href = "teatime">tea time</a>
+     			<br><a class = "border" href = "teatime">lily-livered</a>
      			<br><a class = "border" href = "http://innovativedesign.club" target = "_blank">innovative design</a>
      			<br><a class = "border" href = "http://www.baremagazine.org" target = "_blank">bare</a>
      			<br><br>
