--- a/sketchbook.html
+++ b/sketchbook.html
@@ -27,8 +27,8 @@
      	<div class = "montserrat" id = "menu">
      		<div class = "container">
      			<a class = "border" href = "index.html#work">work:</a>
-     			<br><a class = "border" href = "#">tea time</a>
-     			<br><a class = "border" href = "#">lily-livered</a>
+     			<br><a class = "border" href = "teatime">tea time</a>
+     			<br><a class = "border" href = "teatime">lily-livered</a>
      			<br><a class = "border" href = "http://innovativedesign.club" target = "_blank">innovative design</a>
      			<br><a class = "border" href = "http://www.baremagazine.org" target = "_blank">bare</a>
      			<br><br>
