--- a/squarespace/index.html
+++ b/squarespace/index.html
@@ -4,6 +4,8 @@
 		<link rel = "stylesheet" type = "text/css" href = "style.css">
 		<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src="../js/jquery-1.11.2.min.js"></script>
+		<script src="script.js"></script>
 	</head>
 	<body>
 		<div id = "navigation">
