--- a/sculptures.html
+++ b/sculptures.html
@@ -54,10 +54,10 @@
             </div>
             <div class = "grid">
                 <div class = "item">
-                    <img src = "img/sculptures/ned1.png">
+                    <img src = "img/sculptures/thumbnails/ned1thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/ned2.png">
+                    <img src = "img/sculptures/thumbnails/ned2thumbnail.png">
                 </div>
             </div>
             <div class = "padding">
@@ -68,10 +68,10 @@
             </div>
             <div class = "grid">
                 <div class = "item">
-                    <img src = "img/sculptures/object1.png">
+                    <img src = "img/sculptures/thumbnails/object1thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/object2.png">
+                    <img src = "img/sculptures/thumbnails/object2thumbnail.png">
                 </div>
             </div>
 
@@ -87,16 +87,16 @@
             </div>
             <div class = "grid">
                 <div class = "item">
-                    <img src = "img/sculptures/parts4.png">
+                    <img src = "img/sculptures/thumbnails/parts4thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/parts3.png">
+                    <img src = "img/sculptures/thumbnails/parts3thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/parts1.png">
+                    <img src = "img/sculptures/thumbnails/parts1thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/parts2.png">
+                    <img src = "img/sculptures/thumbnails/parts2thumbnail.png">
                 </div>
 
             </div>
