--- a/sketchbook.html
+++ b/sketchbook.html
@@ -52,67 +52,67 @@
      		<div class = "grid">
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/dots.png">
-     					<img src = "img/sketchbook/dots.png">
+     					<img src = "img/sketchbook/thumbnails/dotsthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/glasses.png">
-     					<img src = "img/sketchbook/glasses.png">
+     					<img src = "img/sketchbook/thumbnails/glassesthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/fog.png">
-     					<img src = "img/sketchbook/fog.png">
+     					<img src = "img/sketchbook/thumbnails/fogthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/down.png">
-     					<img src = "img/sketchbook/down.png">
+     					<img src = "img/sketchbook/thumbnails/downthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/dots2.png">
-     					<img src = "img/sketchbook/dots2.png">
+     					<img src = "img/sketchbook/thumbnails/dots2thumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/key.png">
-     					<img src = "img/sketchbook/key.png">
+     					<img src = "img/sketchbook/thumbnails/keythumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/nude.png">
-     					<img src = "img/sketchbook/nude.png">
+     					<img src = "img/sketchbook/thumbnails/nudethumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/sleep.png">
-     					<img src = "img/sketchbook/sleep.png">
+     					<img src = "img/sketchbook/thumbnails/sleepthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/aaki.png">
-     					<img src = "img/sketchbook/aaki.png">
+     					<img src = "img/sketchbook/thumbnails/aakithumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/taem.png">
-     					<img src = "img/sketchbook/taem.png">
+     					<img src = "img/sketchbook/thumbnails/taemthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/cold.png">
-     					<img src = "img/sketchbook/cold.png">
+     					<img src = "img/sketchbook/thumbnails/coldthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/jawline.png">
-     					<img src = "img/sketchbook/jawline.png">
+     					<img src = "img/sketchbook/thumbnails/jawlinethumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/sketchbook/yellow.png">
-     					<img src = "img/sketchbook/yellow.png">
+     					<img src = "img/sketchbook/thumbnails/yellowthumbnail.png">
      				</a>
      			</div>
      		</div>
