--- a/teatime/test.html
+++ b/teatime/test.html
@@ -248,12 +248,12 @@
                             </div>
                     </div>
                 </div>
-                <footer>
+                <div class = "footer">
                     <div class = "footer-content">
                         <div class = "header"> (c) Angira Shirahatti, 2014</div>
                         <p>Icons: Teapots by Dmitriy Lagunov, Fabio Meroni / studio Slash, Erin Agnoli, Stephanie Wauters, Alasdair Monk, Marie Ringeard & Maureen Placente, Bubble Tea by Dan Hetteix, Whisk by jessie_vp, Juice by im icons, & Glass by Arthur Shlain, from The Noun Project </o>
                     </div> 
-                </footer>
+                </div>
 
 
     </body>
