lolfail fixed stylesheet link

--- a/teatime/test.html
+++ b/teatime/test.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Tea Time </title>
-        <link rel = "stylesheet" type = "text/css" href = "assets/css/teststyle.css">
+        <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
         <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="assets/js/jquery-1.9.1.js"></script>
@@ -248,12 +248,12 @@
                             </div>
                     </div>
                 </div>
-                <div class = "footer">
+                <footer>
                     <div class = "footer-content">
                         <div class = "header"> (c) Angira Shirahatti, 2014</div>
                         <p>Icons: Teapots by Dmitriy Lagunov, Fabio Meroni / studio Slash, Erin Agnoli, Stephanie Wauters, Alasdair Monk, Marie Ringeard & Maureen Placente, Bubble Tea by Dan Hetteix, Whisk by jessie_vp, Juice by im icons, & Glass by Arthur Shlain, from The Noun Project </o>
                     </div> 
-                </div>
+                </footer>
 
 
     </body>
