--- a/teatime/index.html
+++ b/teatime/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Tea Time </title>
-        <link rel = "stylesheet" type = "text/css" href = "assets/css/teststyle.css">
+        <link rel = "stylesheet" type = "text/css" href = "assets/css/style.css">
         <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="assets/js/jquery-1.9.1.js"></script>
