Changed filepath structure

--- a/sculptures/index.html
+++ b/sculptures/index.html
@@ -7,39 +7,39 @@
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
 
         <!-- STYLESHEET -->
-        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
-        <link rel = "stylesheet" type = "text/css" href = "css/sketchcss.css">
-        <link rel = "stylesheet" type = "text/css" href = "css/magnific-popup.css">
+        <link rel = "stylesheet" type = "text/css" href = "../css/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "../css/sketchcss.css">
+        <link rel = "stylesheet" type = "text/css" href = "../css/magnific-popup.css">
 
         <!-- GOOGLE FONTS - MONTSERRAT & RALEWAY -->
         <link href='http://fonts.googleapis.com/css?family=Montserrat:700|Raleway:300,700' rel='stylesheet' type='text/css'>
 
          <!-- JQUERY -->
-         <script src = "js/jquery-1.11.2.min.js"></script>
-         <script src = "js/masonry.pkgd.min.js"></script>
-         <script src = "js/jquery.magnific-popup.min.js"></script>
-         <script src = "js/menu.js"></script>
-         <script src = "js/sketchscript.js"></script>
+         <script src = "../js/jquery-1.11.2.min.js"></script>
+         <script src = "../js/masonry.pkgd.min.js"></script>
+         <script src = "../js/jquery.magnific-popup.min.js"></script>
+         <script src = "../js/menu.js"></script>
+         <script src = "../js/script2.js"></script>
 
      </head>
      <body>
      	<div class = "montserrat" id = "menu">
      		<div class = "container">
      			<a class = "border" href = "index.html#work">work:</a>
-     			<br><a class = "border" href = "teatime">tea time</a>
-     			<br><a class = "border" href = "teatime">lily-livered</a>
+     			<br><a class = "border" href = "../teatime">tea time</a>
+     			<br><a class = "border" href = "../teatime">lily-livered</a>
      			<br><a class = "border" href = "http://innovativedesign.club" target = "_blank">innovative design</a>
      			<br><a class = "border" href = "http://www.baremagazine.org" target = "_blank">bare</a>
      			<br><br>
      			<a class = "border" href = "index.html#play">play:</a>
-     			<br><a class = "border" href = "sculptures.html">sculptures</a>
-     			<br><a class = "border" href = "sketcbook.html">sketchbook</a>
+     			<br><a class = "border" href = "../sculptures">sculptures</a>
+     			<br><a class = "border" href = "../sketcbook">sketchbook</a>
      			<br><a class = "border" href = "#">travel journal</a>
      		</div>
      	</div>
 
      	<div class = "montserrat" id = "navigation">
-     		<span class = "padding"><a class = "border" href = "index.html#play">Back</a></span>
+     		<span class = "padding"><a class = "border" href = "../index.html#play">Back</a></span>
      		<span class = "padding"><a class = "border" id = "m" href = "#menu">menu</a></span>
      	</div>
      	<div class = "container">
@@ -54,10 +54,10 @@
             </div>
             <div class = "grid">
                 <div class = "item">
-                    <img src = "img/sculptures/thumbnails/ned1thumbnail.png">
+                    <img src = "img/thumbnails/ned1thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/thumbnails/ned2thumbnail.png">
+                    <img src = "img/thumbnails/ned2thumbnail.png">
                 </div>
             </div>
             <div class = "padding">
@@ -68,10 +68,10 @@
             </div>
             <div class = "grid">
                 <div class = "item">
-                    <img src = "img/sculptures/thumbnails/object1thumbnail.png">
+                    <img src = "img/thumbnails/object1thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/thumbnails/object2thumbnail.png">
+                    <img src = "img/thumbnails/object2thumbnail.png">
                 </div>
             </div>
 
@@ -87,16 +87,16 @@
             </div>
             <div class = "grid">
                 <div class = "item">
-                    <img src = "img/sculptures/thumbnails/parts4thumbnail.png">
+                    <img src = "img/thumbnails/parts4thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/thumbnails/parts3thumbnail.png">
+                    <img src = "img/thumbnails/parts3thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/thumbnails/parts1thumbnail.png">
+                    <img src = "img/thumbnails/parts1thumbnail.png">
                 </div>
                 <div class = "item">
-                    <img src = "img/sculptures/thumbnails/parts2thumbnail.png">
+                    <img src = "img/thumbnails/parts2thumbnail.png">
                 </div>
 
             </div>
