--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <br><a class = "border" href = "http://www.baremagazine.org" target = "_blank">bare</a>
                 <br><br>
                 <a class = "border" href = "index.html#play">play:</a>
-                <br><a class = "border" href = "index.html#work">sculptures</a>
-                <br><a class = "border" href = "#">sketchbook</a>
+                <br><a class = "border" href = "sculptures">sculptures</a>
+                <br><a class = "border" href = "sketchbook">sketchbook</a>
                 <br><a class = "border" href = "#">travel journal</a>
             </div>
         </div>
@@ -96,23 +96,24 @@
                         <div class = "padding raleway">
                              <a class = "worklink" href = "teatime">
                                 <img class = "onefifty" src = "icons/work/teatime.svg">
-                                <div class = "montserrat withborder">Tea Time &#8594;</div>
                             </a>
+                            <div class = "montserrat withborder">
+                                <a class = "worklink" href = "teatime">Tea Time &#8594;</a>
+                            </div>
 
                             My first web dev project, everything you ever needed to know about loose leaf tea (and some fancy tea-based drinks too).
                             <br><br>
-                            <b>Things I learned about</b>: CSS positioning, JQuery
+                            <b>Things I learned about</b>: CSS positioning, JQuery, Responsive Design, the horrors of vertical centering.
                             <br>
-                            <b>Tools I used</b>: HTML5/CSS3, JQuery, Flexbox Layouts
+                            <b>Tools I used</b>: HTML5/CSS3, JQuery, the Chrome Inspector
                         </div>
                     </div>
                     <div class = "pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
                         <div class = "padding raleway">
-                             <a class = "worklink" href = "#">
+                             <!--LINK-->
                                 <img class = "onefifty" src = "icons/work/insults.svg">
+                            <!--LINK-->
                                 <div class = "montserrat withborder">Lily-livered &#8594;</div>
-                            </a>
-
                             (Coming soon!)
                             <br>
                             My first Javascript project -- insults worthy of Shakespeare at the click of a button. 
@@ -128,8 +129,10 @@
                         <div class = "padding raleway">
                             <a class = "worklink" href ="http://innovativedesign.club" target = "_blank">
                                 <img class = "onefifty" src = "icons/work/innod.svg">
-                                <div class = "montserrat withborder">Innovative Design &#8594;</div>
                             </a>
+                            <div class = "montserrat withborder">
+                                <a class = "worklink" href ="http://innovativedesign.club" target = "_blank">Innovative Design &#8594;</a>
+                            </div>
 
                              Since spring 2014, I've been a design team leader, teaching assistant and officer at Innovative Design, Berkeley's premier graphic design and photography club.
                              <br><br>
@@ -142,8 +145,11 @@
                         <div class = "padding raleway">
                              <a class = "worklink" href = "http://www.baremagazine.org" target = "_blank">
                                 <img class = "onefifty" src = "icons/work/bare.svg">
-                                <div class = "montserrat withborder">Bare Magazine &#8594;</div>
                             </a>
+                            <div class = "montserrat withborder">
+                                <a class = "worklink" href = "http://www.baremagazine.org" target = "_blank">Bare Magazine &#8594;
+                                </a>
+                            </div>
 
                              I served as a member of the layout team for the Spring 2014 and Fall 2014 issues of BARE, Berkeley's fashion and lifestyle magazine. I have also provided event marketing for the organization.
                              <br><br>
@@ -213,8 +219,10 @@
                         <div class = "padding raleway">
                              <a class = "playlink" href = "sculptures.html">
                                 <img class = "onefifty" src = "icons/play/gear.svg">
-                                <div class = "montserrat withborder">Sculptures &#8594;</div> 
-                            </a>  
+                            </a>
+                            <div class = "montserrat withborder">
+                                <a class = "playlink" href = "sketchbook.html">Sculptures &#8594;</a>
+                            </div>  
 
                             I wasn't kidding about taking apart clocks. I also like to put them back together in new ways. If you'd like to commission a clock sculpture, shoot me an <a  class = "border" href = "mailto:ashirahattia@gmail.com" target = "_blank">email</a>.
                             <br><br>
@@ -223,10 +231,12 @@
                     </div>
                     <div class = "pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
                         <div class = "padding raleway">
-                             <a class = "playlink" href = "sketchbook.html">
+                            <a class = "playlink" href = "sketchbook.html">
                                 <img class = "onefifty" src = "icons/play/art.svg">
-                                <div class = "montserrat withborder">Sketchbook &#8594;</div>
                             </a>
+                            <div class = "montserrat withborder">
+                                <a class = "playlink" href = "sketchbook.html">Sketchbook &#8594;</a>
+                            </div>
 
                             I've been drawing and painting since I was little. I work in both traditional and digital media, and I take my moleskine everywhere with me.
                             <br><br>
@@ -237,10 +247,12 @@
                 <div class = "pure-g">
                     <div class = "pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
                         <div class = "padding raleway">
-                             <a class = "playlink" href = "sketchbook.html">
+                             <a class = "playlink" href = "http://angiragoesplaces.tumblr.com" target = "_blank">
                                 <img class = "onefifty" src = "icons/play/pencil.svg">
-                                <div class = "montserrat withborder">Travel Journal &#8594;</div>
                             </a>
+                            <div class = "montserrat withborder">  
+                                <a class = "playlink" href = "http://angiragoesplaces.tumblr.com" target = "_blank">Travel Journal &#8594;</a>
+                            </div>
    
                             Right now, I'm doing a semester abroad at Westminster University in London. You can check out my travel journal to read more about my adventures across the pond!
                         </div>
