--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -7,19 +7,19 @@
         <meta name = "viewport" content = "width = device-width, initial-scale = 1">
 
         <!-- STYLESHEET -->
-        <link rel = "stylesheet" type = "text/css" href = "css/style.css">
-        <link rel = "stylesheet" type = "text/css" href = "css/sketchcss.css">
-        <link rel = "stylesheet" type = "text/css" href = "css/magnific-popup.css">
+        <link rel = "stylesheet" type = "text/css" href = "../css/style.css">
+        <link rel = "stylesheet" type = "text/css" href = "../css/sketchcss.css">
+        <link rel = "stylesheet" type = "text/css" href = "../css/magnific-popup.css">
 
         <!-- GOOGLE FONTS - MONTSERRAT & RALEWAY -->
         <link href='http://fonts.googleapis.com/css?family=Montserrat:700|Raleway:300,700' rel='stylesheet' type='text/css'>
 
          <!-- JQUERY -->
-         <script src = "js/jquery-1.11.2.min.js"></script>
-         <script src = "js/masonry.pkgd.min.js"></script>
-         <script src = "js/jquery.magnific-popup.min.js"></script>
-         <script src = "js/menu.js"></script>
-         <script src = "js/sketchscript.js"></script>
+         <script src = "../js/jquery-1.11.2.min.js"></script>
+         <script src = "../js/masonry.pkgd.min.js"></script>
+         <script src = "../js/jquery.magnific-popup.min.js"></script>
+         <script src = "../js/menu.js"></script>
+         <script src = "../js/script2.js"></script>
 
 
      </head>
@@ -27,20 +27,20 @@
      	<div class = "montserrat" id = "menu">
      		<div class = "container">
      			<a class = "border" href = "index.html#work">work:</a>
-     			<br><a class = "border" href = "teatime">tea time</a>
-     			<br><a class = "border" href = "teatime">lily-livered</a>
+     			<br><a class = "border" href = "../teatime/">tea time</a>
+     			<br><a class = "border" href = "../teatime/">lily-livered</a>
      			<br><a class = "border" href = "http://innovativedesign.club" target = "_blank">innovative design</a>
      			<br><a class = "border" href = "http://www.baremagazine.org" target = "_blank">bare</a>
      			<br><br>
      			<a class = "border" href = "index.html#play">play:</a>
-     			<br><a class = "border" href = "sculptures.html">sculptures</a>
-     			<br><a class = "border" href = "sketchbook.html">sketchbook</a>
+     			<br><a class = "border" href = "../sculptures/">sculptures</a>
+     			<br><a class = "border" href = "../sketchbook/">sketchbook</a>
      			<br><a class = "border" href = "#">travel journal</a>
      		</div>
      	</div>
 
      	<div class = "montserrat" id = "navigation">
-     		<span class = "padding"><a class = "border" href = "index.html#play">Back</a></span>
+     		<span class = "padding"><a class = "border" href = "../index.html#play">Back</a></span>
      		<span class = "padding"><a class = "border" id = "m" href = "#menu">menu</a></span>
      	</div>
      	<div class = "container">
@@ -51,68 +51,68 @@
      		</div>
      		<div class = "grid">
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/dots.png">
-     					<img src = "img/sketchbook/thumbnails/dotsthumbnail.png">
+     				<a class = "link" href = "img/dots.png">
+     					<img src = "img/thumbnails/dotsthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/glasses.png">
-     					<img src = "img/sketchbook/thumbnails/glassesthumbnail.png">
+     				<a class = "link" href = "img/glasses.png">
+     					<img src = "img/thumbnails/glassesthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/fog.png">
-     					<img src = "img/sketchbook/thumbnails/fogthumbnail.png">
+     				<a class = "link" href = "img/fog.png">
+     					<img src = "img/thumbnails/fogthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/down.png">
-     					<img src = "img/sketchbook/thumbnails/downthumbnail.png">
+     				<a class = "link" href = "img/down.png">
+     					<img src = "img/thumbnails/downthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/dots2.png">
-     					<img src = "img/sketchbook/thumbnails/dots2thumbnail.png">
+     				<a class = "link" href = "img/dots2.png">
+     					<img src = "img/dots2thumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/key.png">
-     					<img src = "img/sketchbook/thumbnails/keythumbnail.png">
+     				<a class = "link" href = "img/key.png">
+     					<img src = "img/thumbnails/keythumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/nude.png">
-     					<img src = "img/sketchbook/thumbnails/nudethumbnail.png">
+     				<a class = "link" href = "img/nude.png">
+     					<img src = "img/thumbnails/nudethumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/sleep.png">
-     					<img src = "img/sketchbook/thumbnails/sleepthumbnail.png">
+     				<a class = "link" href = "img/sleep.png">
+     					<img src = "img/thumbnails/sleepthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/aaki.png">
-     					<img src = "img/sketchbook/thumbnails/aakithumbnail.png">
+     				<a class = "link" href = "img/aaki.png">
+     					<img src = "img/thumbnails/aakithumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/taem.png">
-     					<img src = "img/sketchbook/thumbnails/taemthumbnail.png">
+     				<a class = "link" href = "img/taem.png">
+     					<img src = "img/thumbnails/taemthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/cold.png">
-     					<img src = "img/sketchbook/thumbnails/coldthumbnail.png">
+     				<a class = "link" href = "img/cold.png">
+     					<img src = "img/thumbnails/coldthumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/jawline.png">
-     					<img src = "img/sketchbook/thumbnails/jawlinethumbnail.png">
+     				<a class = "link" href = "img/jawline.png">
+     					<img src = "img/thumbnails/jawlinethumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
-     				<a class = "link" href = "img/sketchbook/yellow.png">
-     					<img src = "img/sketchbook/thumbnails/yellowthumbnail.png">
+     				<a class = "link" href = "img/yellow.png">
+     					<img src = "img/thumbnails/yellowthumbnail.png">
      				</a>
      			</div>
      		</div>
