Changed filepath structure

--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
                 <div class = "pure-g">
                     <div class = "pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
                         <div class = "padding raleway">
-                             <a class = "playlink" href = "sculptures.html">
+                             <a class = "playlink" href = "sculptures">
                                 <img class = "onefifty" src = "icons/play/gear.svg">
                             </a>
                             <div class = "montserrat withborder">
-                                <a class = "playlink" href = "sketchbook.html">Sculptures &#8594;</a>
+                                <a class = "playlink" href = "sculptures">Sculptures &#8594;</a>
                             </div>  
 
                             I wasn't kidding about taking apart clocks. I also like to put them back together in new ways. If you'd like to commission a clock sculpture, shoot me an <a  class = "border" href = "mailto:ashirahattia@gmail.com" target = "_blank">email</a>.
@@ -231,11 +231,11 @@
                     </div>
                     <div class = "pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
                         <div class = "padding raleway">
-                            <a class = "playlink" href = "sketchbook.html">
+                            <a class = "playlink" href = "sketchbook">
                                 <img class = "onefifty" src = "icons/play/art.svg">
                             </a>
                             <div class = "montserrat withborder">
-                                <a class = "playlink" href = "sketchbook.html">Sketchbook &#8594;</a>
+                                <a class = "playlink" href = "sketchbook">Sketchbook &#8594;</a>
                             </div>
 
                             I've been drawing and painting since I was little. I work in both traditional and digital media, and I take my moleskine everywhere with me.
