Changed filepath structure

--- a/sculptures/index.html
+++ b/sculptures/index.html
@@ -33,7 +33,7 @@
      			<br><br>
      			<a class = "border" href = "index.html#play">play:</a>
      			<br><a class = "border" href = "../sculptures">sculptures</a>
-     			<br><a class = "border" href = "../sketcbook">sketchbook</a>
+     			<br><a class = "border" href = "../sketchbook">sketchbook</a>
      			<br><a class = "border" href = "#">travel journal</a>
      		</div>
      	</div>
