Changed filepath structure

--- a/sculptures/index.html
+++ b/sculptures/index.html
@@ -34,7 +34,7 @@
      			<a class = "border" href = "index.html#play">play:</a>
      			<br><a class = "border" href = "../sculptures">sculptures</a>
      			<br><a class = "border" href = "../sketchbook">sketchbook</a>
-     			<br><a class = "border" href = "#">travel journal</a>
+     			<br><a class = "border" href = "http://angiragoesplaces.tumblr.com">travel journal</a>
      		</div>
      	</div>
 
