--- a/sculptures/index.html
+++ b/sculptures/index.html
@@ -50,7 +50,7 @@
 
             <div class = "montserrat subheader">Ned</div>
             <div class = "raleway padding">
-                Ned is an assemblage of clock and watch parts, and a wooden artists model. His insides are fully functional and can be turned using a pin located on his back. He currently resides in Chiciago and is, like most people, more than the sum of his parts.
+                Ned is an assemblage of clock and watch parts, and a wooden artists model. His insides are fully functional and can be turned using a pin located on his back. He currently resides in Chicago and is, like most people, more than the sum of his parts.
             </div>
             <div class = "grid">
                 <div class = "item">
