--- a/sculptures/index.html
+++ b/sculptures/index.html
@@ -63,7 +63,7 @@
             <div class = "padding">
                 <div class = "montserrat subheader">The Object</div>
                 <div class = "raleway">
-                    The Object is made of parts of several watches and clocks, a sewing machine, a stencil, some a keyhole, and a copy of <i>A Rose In Bloom</i> by Louisa May Alcott
+                    The Object is made of parts of several watches and clocks, a sewing machine, a stencil, a keyhole, and a copy of <i>A Rose In Bloom</i> by Louisa May Alcott
                 </div>
             </div>
             <div class = "grid">
