--- a/sculptures/index.html
+++ b/sculptures/index.html
@@ -48,18 +48,21 @@
      			As I wander about my life in various cities, and as I travel around the globe, I like to pick up old rusty bits of metal and glass, old machinery and trinkets, and anything else that looks interesting. I bring them home, I take them apart, and then I put them back together again.
      		</div>
 
-            <div class = "montserrat subheader">Ned</div>
-            <div class = "raleway padding">
-                Ned is an assemblage of clock and watch parts, and a wooden artists model. His insides are fully functional and can be turned using a pin located on his back. He currently resides in Chicago and is, like most people, more than the sum of his parts.
-            </div>
-            <div class = "grid">
-                <div class = "item">
-                    <img src = "img/thumbnails/ned1thumbnail.png">
+            <div class = "padding">
+                <div class = "montserrat subheader">Ned</div>
+                <div class "raleway">
+                    Ned is an assemblage of clock and watch parts, and a wooden artists model. His insides are fully functional and can be turned using a pin located on his back. He currently resides in Chicago and is, like most people, more than the sum of his parts.
                 </div>
-                <div class = "item">
-                    <img src = "img/thumbnails/ned2thumbnail.png">
+                <div class = "grid">
+                    <div class = "item">
+                        <img src = "img/thumbnails/ned1thumbnail.png">
+                    </div>
+                    <div class = "item">
+                        <img src = "img/thumbnails/ned2thumbnail.png">
+                    </div>
                 </div>
             </div>
+            
             <div class = "padding">
                 <div class = "montserrat subheader">The Object</div>
                 <div class = "raleway">
