--- a/sketchbook/index.html
+++ b/sketchbook/index.html
@@ -72,7 +72,7 @@
      			</div>
      			<div class = "item">
      				<a class = "link" href = "img/dots2.png">
-     					<img src = "img/dots2thumbnail.png">
+     					<img src = "img/thumbnails/dots2thumbnail.png">
      				</a>
      			</div>
      			<div class = "item">
