lily-livered is live

--- a/index.html
+++ b/index.html
@@ -105,22 +105,25 @@
                             <br><br>
                             <b>Things I learned about</b>: CSS positioning, JQuery, Responsive Design, the horrors of vertical centering.
                             <br>
-                            <b>Tools I used</b>: HTML5/CSS3, JQuery, the Chrome Inspector
+                            <b>Tools I used</b>: HTML5/CSS3, JQuery, the Chrome Inspector (mostly the Chrome Inspector)
                         </div>
                     </div>
                     <div class = "pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
                         <div class = "padding raleway">
-                             <!--LINK-->
+                             <a class "worklink" href = "lily-livered">
                                 <img class = "onefifty" src = "icons/work/insults.svg">
-                            <!--LINK-->
-                                <div class = "montserrat withborder">Lily-livered &#8594;</div>
-                            (Coming soon!)
-                            <br>
-                            My first Javascript project -- insults worthy of Shakespeare at the click of a button. 
+                            </a>
+                            <div class = "montserrat withborder">
+                                <a class "worklink" href = "lily-livered">
+                                    Lily-livered &#8594;
+                                </a>
+                            </div>
+                            
+                            A javascript mini-project as I begin to familiarize myself with the language syntax and usage. Insults worthy of Shakespeare at the click of a button.
                             <br><br>
-                            <b>Things I learned about</b>:
+                            <b>Things I learned about</b>: Javascript syntax, the DOM model
                             <br>
-                            <b>Tools I used</b>:
+                            <b>Tools I used</b>: Javascript, HTMIL/CSS, Python
                         </div>
                     </div>
                 </div>
