lily-livered is live

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <img class = "onefifty" src = "icons/work/insults.svg">
                             </a>
                             <div class = "montserrat withborder">
-                                <a class "worklink" href = "lily-livered">
+                                <a class = "worklink" href = "lily-livered">
                                     Lily-livered &#8594;
                                 </a>
                             </div>
