lily-livered is live

--- a/sculptures/index.html
+++ b/sculptures/index.html
@@ -83,9 +83,9 @@
                 <div class = "raleway">
                     Still in progress. The screws on the clock heart are pretty badly stripped so I'm currently working on finding a way to get it open without damaging it.
                     <br><br>
-                    <i>Sea Fever,</i> by John Maserfield
-                    <br>I must go down to the seas again, to the lonely sea and the sky,
-                    <br>And all I ask is a tall ship and a star to steer her by;
+                    <i>Sea Fever,</i> by John Maserfield:
+                    <br><i>I must go down to the seas again, to the lonely sea and the sky,
+                    <br>And all I ask is a tall ship and a star to steer her by,</i>
                 </div>
             </div>
             <div class = "grid">
