lily-livered is live

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class = "container">
                 <a class = "m border" href = "index.html#work">work:</a>
                 <br><a class = "border" href = "teatime">tea time</a>
-                <br><a class = "border" href = "#">lily-livered</a>
+                <br><a class = "border" href = "lily-livered">lily-livered</a>
                 <br><a class = "border" href = "http://innovativedesign.club" target = "_blank">innovative design</a>
                 <br><a class = "border" href = "http://www.baremagazine.org" target = "_blank">bare</a>
                 <br><br>
