Cover letters edits

--- a/birchbox/index.html
+++ b/birchbox/index.html
@@ -16,7 +16,7 @@
 				</div>
 
 				<div class = "caption" id = "coverletter">
-					(For a pdf of my formal cover letter, click <a class = "w" href = "#">here</a>)
+					(For a pdf of my formal cover letter, click <a class = "w" href = "coverletter.pdf">here</a>)
 				</div>
 
 				<div class = "padding" id = "links">
@@ -66,7 +66,7 @@
 				<a class = "w" href = "http://ashirahatti.com">Website</a> &middot; 
 				<a class = "w" href = "mailto:ashirahattia@gmail.com">Email</a> &middot;
 				<a class = "w" href = "../resume.pdf">Resume</a> &middot;
-				<a class = "w" href = "#f">Cover Letter</a>
+				<a class = "w" href = "coverletter.pdf">Cover Letter</a>
 			</footer>
 		</div>
 
