--- a/grubhub/index.html
+++ b/grubhub/index.html
@@ -16,7 +16,7 @@
 				</div>
 
 				<div class = "caption" id = "coverletter">
-					(For a pdf of my formal cover letter, click <a class = "w" href = "#">here</a>)
+					(For a pdf of my formal cover letter, click <a class = "w" href = "coverletter.pdf">here</a>)
 				</div>
 
 				<div class = "padding" id = "links">
@@ -49,7 +49,7 @@
 		<div class = "wrapper red">
 			<div class = "container">
 				<div class = "header">
-					I also love solving problems, learning new things, and technology that improves people's lives. So naturally, I would love the opportunity to be a part of a team like GrubHub's.
+					I also love solving problems, learning new things, and technology that improves people's lives. I also believe that food is the foundation of family, culture, happiness, and comfort. So naturally, I would love the opportunity to be a part of a team like GrubHub's, that is committed to making sure that users always have access to that perfect, completely satisfying bite.
 				</div>
 			</div>
 		</div>
@@ -77,7 +77,7 @@
 				<a class = "w" href = "http://ashirahatti.com">Website</a> &middot; 
 				<a class = "w" href = "mailto:ashirahattia@gmail.com">Email</a> &middot;
 				<a class = "w" href = "../resume.pdf">Resume</a> &middot;
-				<a class = "w" href = "#f">Cover Letter</a>
+				<a class = "w" href = "coverletter.pdf">Cover Letter</a>
 			</footer>
 		</div>
 
