Cover letters edits

--- a/birchbox/index.html
+++ b/birchbox/index.html
@@ -38,7 +38,7 @@
 		<div class = "wrapper blue">
 			<div class = "container">
 				<div class = "header">
-					I also love solving problems, learning new things, and technology that improves people's lives. So naturally, I would love the opportunity to be a part of a team like Birchbox's.
+					I also love solving problems, learning new things, and technology that improves people's lives. When I think about Birchbox, I think about a company that is taking the possibilities technology presents in providing services that make people’s lives easier to a whole new level. After all, what could be more delightful than receiving a box of useful goodies every month in the mail? So naturally, I would love the opportunity to be a part of a team like Birchbox's.
 				</div>
 			</div>
 		</div>
