more cover letters

--- a/birchbox/index.html
+++ b/birchbox/index.html
@@ -30,7 +30,7 @@
 		<div class = "wrapper white">
 			<div class = "container">
 				<div class = "header">
-					I'm currently studying CS at UC Berkeley. I love engineering, design, and things that smell nice.
+					I'm currently studying CS & design at UC Berkeley. I love engineering, human computer interaction, art, big cities, and things that smell nice.
 				</div>
 			</div>
 		</div>
