more cover letters

--- a/tumblr/index.html
+++ b/tumblr/index.html
@@ -107,7 +107,7 @@
 
 		<div class = "container">
 			<div class = "text">
-				My ultimate goal has always been to build products that make the world a more beautiful, function place. The Tumblr team does exactly that, and I would like nothing better than to be part of it. Thank you!
+				My ultimate goal has always been to build products that make the world a more beautiful, happy, functional place. The Tumblr team does exactly that, and I would like nothing better than to be part of it. Thank you!
 				<br><br>
 				Sincerely, 
 				<br>Angira Shirahatti
