--- a/knewton/index.html
+++ b/knewton/index.html
@@ -38,7 +38,7 @@
 		<div class = "wrapper blue">
 			<div class = "container">
 				<div class = "header">
-					I also love solving problems, learning new things, and technology that improves people's lives. I know I'm not the only one in the world that loves learning new things, and I truly believe that there is nothing more important and valuable in this world than education. It's the opportunity that every single person deserves, it's the ultimate door to opportunity. There is nothing more awe-inspiring or magical than learning something new.
+					I also love solving problems, learning new things, and technology that improves people's lives. I know I'm not the only one in the world that loves learning new things, and I truly believe that there is nothing more important and valuable in this world than education. There is nothing more awe-inspiring or magical than learning something new.
 				</div>
 			</div>
 		</div>
