--- a/knewton/index.html
+++ b/knewton/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title> Angira Shirahatti Birchbox Cover Letter </title>
+		<title> Angira Shirahatti Knewton Cover Letter </title>
 		<link rel = "stylesheet" type = "text/css" href = "style.css">
 		<link href='http://fonts.googleapis.com/css?family=Raleway:800|Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
