--- a/new-site/index.html
+++ b/new-site/index.html
@@ -16,7 +16,7 @@
 			<div class="blurb">
 				<h1>Hi, My name is Angira!</h1>
 				<p>
-					I'm a UC Berkeley Junior studying Computer Science and Design. I like bright colors, conquering bugs, and listening to audiobooks. I also like eating tasty food. 
+					I'm a UC Berkeley Junior studying Computer Science and Design. I like bright colors, conquering bugs, and listening to audiobooks.
 					<br>Scroll down to see some of my work!
 				</p>
 
@@ -32,9 +32,9 @@
 		</div>
 		<!-- Body -->
 		<div class="background white">
-			<div class="content">
+			<div class="content"
 				<!-- Shapeways -->
-				<div class="container">
+				<div class="container first-item">
 					<!-- Image -->
 					<div class="overlay yellow">
 					</div>
